Подправил модели page object, сделал автотесты.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ first_scenario.py
 second_scenario.py
 third_scenario.py
 sandbox.py
-test_case.pdf
+zadanie.pdf
+download/
 
 # Distribution / packaging
 .Python
